# django-polaris

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  MANIFEST.in  Makefile  Pipfile  Procfile  README.md  README.rst  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  heroku.yml  pyproject.toml  pytest.ini  readthedocs.yml  settings.py  setup.cfg  setup.py
.circleci/: config.yml
.github/: dependabot.yml  release.yml
.github/workflows/: deploy-and-test.yml  main.yml  release.yml  test.yml
docs/: api.rst  conf.py  contents.rst  contributing.rst  custody.rst  deployment.rst  forms.rst  glossary.rst  index.rst  installation.rst  middleware.rst  rails.rst  requirements.txt  sep-1.rst  sep-10.rst  sep-12.rst  sep-24.rst  sep-31.rst  sep-38.rst  sep-6.rst
docs/celery/: index.rst
docs/contribute/: development.rst
docs/custody/: index.rst
docs/deployment/: index.rst
docs/exceptions/: index.rst
docs/forms/: index.rst
docs/integrations/: index.rst
docs/internationalization/: index.rst
docs/middleware/: index.rst
docs/models/: index.rst
docs/multisignature_assets/: index.rst
docs/register_integrations/: index.rst
docs/sep1/: index.rst
docs/sep10/: index.rst
docs/sep12/: index.rst
docs/sep31/: index.rst
docs/sep38/: index.rst
docs/sep6_and_sep24/: index.rst
docs/shared_accounts/: index.rst
docs/source/: conf.py  contents.rst  index.rst
docs/source/integrations/: index.rst
docs/source/models/: index.rst
docs/templates/: index.rst
docs/tutorials/: index.rst
example/: .env.example  Pipfile  Procfile  README.rst  __init__.py  apps.py  db-init.sh  forms.py  manage.py  nginx-letsencrypt.conf  pytest.ini  release-heroku.sh  release.sh  settings.py  wsgi.py
example/data/: db.sqlite3
example/integrations/: deposit.py  info.py  mock_banking_rails.py  sep24_kyc.py  withdraw.py
example/migrations/: 0001_initial.py  0002_auto_20200207_0002.py  0003_auto_20200222_0003.py  0004_auto_20200427_2302.py  0005_auto_20200702_1908.py  0006_auto_20200615_2046.py  0007_auto_20210921_2005.py  0008_offchainassetextra.py  0009_auto_20211028_2139.py
example/scripts/: get-circle-usdc.py
example/server/: admin.py  apps.py  forms.py  integrations.py  mock_banking_rails.py  mock_exchange.py  models.py  sep31_integrations.py  settings.py  urls.py  views.py  wsgi.py
example/server/integrations/: __init__.py  deposit.py  info.py  mock_exchange.py  quotes.py  rails.py  sep24_kyc.py  sep31.py  withdraw.py
example/server/migrations/: 0001_initial.py  0002_auto_20200207_0002.py  0003_auto_20200222_0003.py  0005_auto_20200615_2046.py  0005_auto_20200702_1908.py  0005_registeredsep31counterparty.py  0006_auto_20200615_2046.py  0007_auto_20210921_2005.py  0008_offchainassetextra.py
example/server/templates/: confirmation_email.html  email_confirmed.html  readonly_login.html  stellar.toml  transaction_confirmation.html
example/server/tests/: test.py
example/templates/: email_confirmed.html
example/tests/: test.py
polaris/: .env.example  __init__.py  cert.pem  config-example.yml  db.sqlite3  exceptions.py  key.pem  manage.py  middleware.py  models.py  pytest.ini  run.sh  settings.py  utils.py
polaris/collectstatic/: __init__.py
polaris/integrations/: custody.py  customers.py  fees.py  forms.py  info.py  quote.py  rails.py  sep31.py  transactions.py
polaris/locale/: utils.py
polaris/management/commands/: execute_outgoing_transactions.py  poll_outgoing_transactions.py  process_pending_deposits.py  testnet.py  watch_transactions.py
polaris/migrations/: 0001_initial.py  0002_auto_20200921_2135.py  0003_auto_20201009_1300.py  0004_auto_20201120_1541.py  0005_auto_20210226_0053.py  0006_transaction_more_info_url.py  0007_transaction_on_change_callback.py  0008_transaction_pending_execution_attempt.py  0009_transaction_client_domain.py  0010_auto_20210809_1605.py  0011_transaction_amount_expected.py  0012_auto_20210918_2053.py  0013_auto_20211011_1956.py  0014_auto_20220211_0624.py
polaris/polaris/: __init__.py  admin.py  apps.py  cors.py  helpers.py  middleware.py  models.py  settings.py  shared_endpoints.py  tasks.py  urls.py  utils.py
polaris/polaris/collectstatic/: __init__.py
polaris/polaris/deposit/: forms.py  urls.py  utils.py  views.py
polaris/sep1/: views.py
polaris/sep10/: urls.py  views.py
polaris/sep12/: customer.py  urls.py
polaris/sep24/: deposit.py  fee.py  info.py  transaction.py  utils.py  withdraw.py
polaris/sep31/: info.py  serializers.py  transactions.py
polaris/sep38/: prices.py  quote.py
polaris/sep6/: deposit.py  info.py  withdraw.py
polaris/shared/: endpoints.py  serializers.py
polaris/tests/: auth_test.py  conftest.py  helpers.py  settings.py  test_register_integrations.py  test_utils.py
server/: README.rst  __init__.py  admin.py  forms.py  models.py  wsgi.py
server/integrations/: customers.py  deposit.py  fee.py  mock_banking_rails.py  quotes.py  sep24_kyc.py  withdraw.py
server/migrations/: 0001_initial.py  0002_auto_20200207_0002.py  0003_auto_20200222_0003.py  0004_auto_20200427_2302.py  0005_auto_20200702_1908.py  0006_auto_20200615_2046.py  0007_auto_20210921_2005.py  0008_offchainassetextra.py  0009_auto_20211028_2139.py  0010_auto_20230316_1120.py
server/templates/: transaction_confirmation.html
src/: helpers.py  manage.py
src/app/: __init__.py  celery.py  settings.py  urls.py
src/deposit/: apps.py  forms.py  tasks.py  urls.py  views.py
src/fee/: apps.py  urls.py  views.py
src/info/: admin.py  apps.py  models.py  urls.py  views.py
src/sep10auth/: apps.py  urls.py  views.py
src/static/: base.css
src/stellartoml/: apps.py  urls.py  views.py
src/templates/: base.html
src/tests/: auth_test.py  conftest.py  deposit_test.py  fee_test.py  helpers.py  info_test.py  transaction_test.py  transactions_more_info_test.py  transactions_test.py  withdraw_test.py
src/transaction/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/withdraw/: apps.py  forms.py  tasks.py  urls.py  views.py
(+333 files in other folders)
