[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-polaris"
version = "2.5.0"
description = "An extendable Django server for Stellar Ecosystem Proposals."
license = "Apache-2.0"
authors = ["Stellar Development Foundation <jake@stellar.org>"]
readme = "README.rst"
homepage = "https://github.com/stellar/django-polaris"
repository = "https://github.com/stellar/django-polaris"
documentation = "https://django-polaris.readthedocs.io/en/stable"
keywords = ["stellar", "anchor", "polaris", "sep", "server"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [{ "include" = "polaris" }]
exclude = ["**/*.scss", "**/tests/*"]

[tool.poetry.urls]
"Release Notes" = "https://github.com/stellar/django-polaris/releases"
"Bug Tracker" = "https://github.com/stellar/django-polaris/issues"

[tool.poetry.dependencies]
python = "^3.10"
django = ">=4.2"
asgiref = ">=3.2"
django-model-utils = ">=4.1"
djangorestframework = ">=3.12"
whitenoise = ">=5.3"
stellar-sdk = { version = ">=10", extras=["aiohttp"] }
aiohttp = ">=3.7"
django-cors-headers = ">=3.7"
pyjwt = ">=2.1"
cryptography = ">=41.0"
sqlparse = ">=0.4.2"
django-environ = "*"
toml = "*"
pytz = "*"
readthedocs-sphinx-ext = { version = "^2.1", optional = true }
sphinx = { version = "^4.2", optional = true }
sphinx-rtd-theme = { version = "^1.0", optional = true }
sphinx-autodoc-typehints = { version = "*", optional = true }
gunicorn = { version = "*", optional = true }
psycopg2-binary = { version = ">=2.9", optional = true }
watchdog = { version = "*", optional = true }

[tool.poetry.dev-dependencies]
pylint = "*"
pylint-django = "*"
pytest = "*"
pytest-django = "*"
pytest-asyncio = "*"
pytest-cov = "*"
codecov = "*"
libsass = "*"
build = "*"
black = "*"

[tool.poetry.extras]
dev-server = ["gunicorn", "psycopg2-binary", "watchdog"]
docs = [
    "readthedocs-sphinx-ext",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
]

[tool.coverage.run]
source = ["polaris"]
omit = [
    "**/admin.py",
    "**/apps.py",
    "**/migrations/*",
    "**/settings.py",
    "**/tests/*",
    "**/urls.py",
    "**/wsgi.py",
    "**/collectstatic/*",
    "**/manage.py",
    "**/.venv/*",
    "**/.local/*",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "def __str__"]
