[metadata]
name = django-polaris
version = attr: polaris.__version__
description = An extendable Django server for Stellar Ecosystem Proposals.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://django-polaris.readthedocs.io/en/stable
author = Stellar Development Foundation
author_email = jake@stellar.org
license = Apache license 2.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
project_urls =
    Documentation = https://django-polaris.readthedocs.io/en/stable
    Release notes = https://github.com/stellar/django-polaris/releases
    Bug Tracker = https://github.com/stellar/django-polaris/issues
keywords =
    stellar
    sdf
    anchor
    server
    polaris
    sep-24
    sep24
    sep-31
    sep31

[options]
python_requires = >=3.10
packages = find:
package_dir =
    = polaris
include_package_data = true
install_requires =
    django >=3.2, <4.0
    asgiref >=3.2, <4
    django-environ
    django-model-utils <5.0, >=4.1
    djangorestframework >=3.12, <4.0
    whitenoise >=5.3, <6.0
    stellar-sdk ==8.0.0b4
    aiohttp <4, >=3.7
    django-cors-headers <4.0, >=3.7
    toml
    pyjwt >=2.1, <3.0
    cryptography <4.0, >=3.4
    sqlparse >=0.4.2


[options.packages.find]
where = polaris
include = polaris, polaris.*
exclude = polaris.tests, polaris.tests.*, polaris.collectstatic
